# printarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/models/: library.py  settings.py
app/routers/: files.py  library.py  queue.py  search.py  settings.py  sources.py
app/schemas/: models.py
app/services/: files.py  import_url.py  library.py  queue.py  search.py  settings.py
app/sources/: __init__.py  base.py  cults3d.py  makeronline.py  makerworld.py  myminifactory.py  printables.py  thingiverse.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FilesModal.tsx  ModelCard.tsx  SearchBar.tsx  Sidebar.tsx  SourceProgress.tsx
frontend/src/pages/: LibraryPage.tsx  QueuePage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/src/store/: libraryStore.ts  queueStore.ts  searchStore.ts
frontend/src/styles/: globals.css
tests/: conftest.py  test_files_service.py  test_queue_service.py
